@@ -7,6 +7,7 @@ CHANGELOG
 
 * Fix KML coordinates not being in 3D.
 * GPX now has trek description (fixes #775)
+* Order overlapping topologies by order of progression (fixes #777)
 
 0.20.9 (2013-10-30)
 -------------------
